--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -1,63 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/textView"
         android:layout_marginTop="40dp"
-        android:text="Computer Science" />
+        android:text="Computer Science"
+        app:layout_constraintTop_toTopOf="@id/textView" />
 
     <CheckBox
         android:id="@+id/checkBox2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/checkBox"
         android:layout_marginTop="40dp"
-        android:text="Computer Engineering" />
+        android:text="Computer Engineering"
+        app:layout_constraintTop_toBottomOf="@id/checkBox" />
+
     <CheckBox
         android:id="@+id/checkBox3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/checkBox2"
         android:layout_marginTop="40dp"
-        android:text="Recruiting Events" />
+        android:text="Recruiting Events"
+        app:layout_constraintTop_toBottomOf="@id/checkBox2" />
 
     <CheckBox
         android:id="@+id/checkBox4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/checkBox3"
         android:layout_marginTop="40dp"
-        android:text="Dance Events" />
+        android:text="Dance Events"
+        app:layout_constraintTop_toBottomOf="@id/checkBox3" />
 
     <CheckBox
         android:id="@+id/checkBox5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       app:layout_constraintTop_toBottomOf="@id/checkBox4"
         android:layout_marginTop="40dp"
-        android:text="Movies" />
+        android:text="Movies"
+        app:layout_constraintTop_toBottomOf="@id/checkBox4" />
 
     <CheckBox
         android:id="@+id/checkBox6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/checkBox5"
         android:layout_marginTop="40dp"
-        android:text="CheckBox" />
+        android:text="CheckBox"
+        app:layout_constraintTop_toBottomOf="@id/checkBox5" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Check the boxes that you are interested in" />
+        android:text="Check the boxes that you are interested in"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
@@ -65,18 +66,33 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="30dp"
-        android:text="Next"
         android:onClick="nextActivity"
+        android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent" />
+
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="start"
         android:inputType="date"
-        tools:layout_editor_absoluteX="130dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/editText2"
         tools:layout_editor_absoluteY="72dp" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="end"
+        android:inputType="date"
+        app:layout_constraintLeft_toRightOf="@id/editText"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="72dp" />
+
     />
 </android.support.constraint.ConstraintLayout>
