--- a/app/src/main/res/layout/details_dialog.xml
+++ b/app/src/main/res/layout/details_dialog.xml
@@ -9,18 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/nameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="Event Name"
             android:textColor="@android:color/holo_blue_dark"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:id="@+id/nameTxt"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/timeTxt"
@@ -30,9 +30,7 @@
             android:padding="10dp"
             android:text="Time:"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/fall"
-             />
-
+            android:textColor="@color/fall" />
 
 
         <TextView
@@ -42,8 +40,7 @@
             android:padding="10dp"
             android:text="Location:"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/summer"
-            />
+            android:textColor="@color/summer" />
 
 
     </LinearLayout>
